--- a/c3270/configure.in
+++ b/c3270/configure.in
@@ -89,7 +89,7 @@ AC_CHECK_HEADERS(util.h)
 AC_CHECK_HEADERS(getopt.h)
 dnl Find the best curses header file and hope it's consistent with the library
 dnl we found.
-AC_CHECK_HEADERS(ncursesw/ncurses.h, ,
+AC_CHECK_HEADERS(ncurses/ncurses.h, ,
  [AC_CHECK_HEADERS(ncurses/ncurses.h, ,
   [AC_CHECK_HEADERS(ncurses.h, ,
    [AC_CHECK_HEADERS(curses.h, , [AC_MSG_ERROR(No curses header file)])])])])
